# t_roo

./: LICENSE  README.md  pyproject.toml
docs/: index.md  index.rst  requirements.txt
docs/_static/: custom.css
docs/api/: t_roo.backends.rst
docs/examples/: prior_nsbh.prior  troo_inj.py
docs/source/: conf.py  index.md  index.rst  references.bib  t_roo.utils.rst
docs/source/api/: index.md  modules.rst  t_roo.backends.backend.rst  t_roo.backends.hdfbackend.rst  t_roo.backends.rst  t_roo.bilby_utils.rst  t_roo.block_sampling.rst  t_roo.cosmology.rst  t_roo.ensemble.rst  t_roo.logging.rst  t_roo.model.rst  t_roo.moves.move.rst  t_roo.moves.red_blue_for_rj.rst  t_roo.moves.rj_proposal_gwbinaries.rst  t_roo.moves.rj_setup_gwbinaries.rst  t_roo.moves.rst  t_roo.moves.stretch.rst  t_roo.moves.tempering.rst  t_roo.moves.within_model_stretch.rst  t_roo.pbar.rst  t_roo.prior.prior_base.rst  t_roo.prior.prior_gw.rst  t_roo.prior.prior_utils.rst  t_roo.prior.rst  t_roo.rst  t_roo.state.rst  t_roo.utils.conversion.rst  t_roo.utils.periodic.rst  t_roo.utils.rst  t_roo.utils.stopping.rst  t_roo_old.rst  (+3 more)
t_roo/: bilby_utils.py  ensemble.py  logging.py  proposal_block_sampling.py  state.py
t_roo.egg-info/: PKG-INFO  README.md  SOURCES.txt  pyproject.toml  requires.txt  top_level.txt
t_roo.egg-info/t_roo/: __init__.py  proposal_block_sampling.py
t_roo/backends/: backend.py
t_roo/moves/: move.py  red_blue_for_rj.py  rj.py  rj_proposal_gwbinaries.py  rj_setup_gwbinaries.py  stretch.py  within_model_stretch.py
t_roo/prior/: prior_base.py  prior_gw.py  prior_utils.py
(+18 files in other folders)
